--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "^4.0.1",
     "@nuxtjs/color-mode": "^3.5.2",
+    "bcrypt": "^6.0.0",
     "nuxt": "^4.1.3",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
